@@ -7,6 +7,9 @@ Revision history for Class-Tiny
     - accessors without defaults are now much faster (comparable
       to Class::Accessor::Fast)
 
+    - constructor and destructors are slightly faster when there
+      are no superclasses except Class::Tiny::Object
+
 0.006     2013-09-05 11:56:48 America/New_York
 
     [ADDED]
